fix status icon spacing.

--- a/_scss/_default.scss
+++ b/_scss/_default.scss
@@ -411,7 +411,7 @@ ul.text-list {
 /* FOOTER */
 
 .status-indicator {
-  margin: 10px;
+  margin-right: 10px;
   font-size: 1.2em;
 
   .none { color: #7af5a3 }
